--- a/r2-dashboard/app/styles/main.scss
+++ b/r2-dashboard/app/styles/main.scss
@@ -10,8 +10,8 @@ body {
   margin: 10px;
   padding: 10px;
   display: grid;
-  // grid-template-columns: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  // grid-template-columns: 1fr 2fr;
   width: 100%;
 }
 
